[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/menu/options_menu/OptionsMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/menu/pause_menu/PauseMenu.gd" type="Script" id=2]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.705882 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 412.0
margin_top = 194.0
margin_right = 612.0
margin_bottom = 406.0

[node name="Resume" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
text = "Resume"

[node name="Restart" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 200.0
margin_bottom = 104.0
rect_min_size = Vector2( 200, 50 )
text = "Restart"

[node name="Settings" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 200.0
margin_bottom = 158.0
rect_min_size = Vector2( 200, 50 )
text = "Settings"

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 200.0
margin_bottom = 212.0
rect_min_size = Vector2( 200, 50 )
text = "Exit"

[node name="Options" parent="." instance=ExtResource( 1 )]
visible = false

[connection signal="pressed" from="CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
